still adjusting the footer links position-fixed to show well on mobile

--- a/Dashboard/dashboard.css
+++ b/Dashboard/dashboard.css
@@ -514,11 +514,11 @@ main {
     .footer {
         bottom: 0;
         height: 4.8rem;
-        border-top: 0.5px solid #D9D9D9;
-        background-color: rgba(255, 255, 255, 1);
     }
-
+    
     .footer-inner{
+        /* border-top: 0.5px solid #D9D9D9; */
+        background-color: rgba(255, 255, 255, 1);
         width: 90%;
     }
 
